Fixed help icon cutoff at 1080p no scaling.
Rotating a miniscule amount is the accepted workaround. See link in comment for more details.

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/shared/info/info.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/shared/info/info.component.scss
@@ -12,6 +12,8 @@ a {
 
   mat-icon {
     font-size: 18px;
+    // https://github.com/google/material-design-icons/issues/648
+    transform: rotate(0.03deg);
     width: unset;
     height: unset;
     overflow: unset;
